подправили чуток текст

--- a/templates/main.html
+++ b/templates/main.html
@@ -105,7 +105,7 @@
 			<h3><b>Легко!</b>  создание, хостинг, администрирование
 			<br><a href="#zvonite">звоните</a></h3>
 			<h3>
-			    <b><big class="text-warning">цена договорная</big> <br>&nbsp;&nbsp;в зависимости от сложности</b>
+			    <b><big class="text-warning">цена договорная</big><!--  <br>&nbsp;&nbsp;в зависимости от сложности</b> -->
 			</h3>
 			<!-- <big class="pull-right"><big>примеры уже готовых сайтов <a href='/sites'><u>тут</u></a></big></big> -->
 		</div>
