--- a/templates/main.html
+++ b/templates/main.html
@@ -117,7 +117,7 @@
 </div>
 
 <div class="jumbotron" id="zvonite">
-  <h1>Звоните <small><small>или сделайте дозвон и вам перезвонят</small></small></h1>
+  <h1>Звоните<small><small>, дайте дозвон или <a href="/messages#new" class="btn btn-lg btn-primary"><big>пишите</big></a> и вам перезвонят</small></small></h1>
   <h2><u>перед</u> звонком обязательно узнайте модель вашего ноутбука, монитора или принтера/картриджа</h2>
   <br>
   <h3> <i><b> <big> +7 912-131-72-18 </big></b></i><small>(мтс город Инта)</small></h3>
