--- a/templates/maintemplate.html
+++ b/templates/maintemplate.html
@@ -3,19 +3,34 @@
   <head>
     <title>vRASHKE.ru</title>
 	
+	
 	<link rel="shortcut icon" type="image/ico" href="/img/favicon.ico">
     <link rel='stylesheet' href='/css/bootstrap{{if .s.white}}.white{{else}}.dark{{end}}.min.css' />
+
+	<link rel="stylesheet" href="/css/blueimp-gallery.min.css">
+	<link rel='stylesheet' href='/css/bootstrap-image-gallery.min.css' />
+
 	<link rel='stylesheet' href='/css/stickyfooter.css' />
 	<link rel='stylesheet' href='/css/fonts.css' />
+	<link rel='stylesheet' href='/css/styles.css' />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	
+	<script type='text/javascript' src='/js/jquery.min.js'></script>
+	<script type='text/javascript' src='/js/bootstrap.min.js'></script>
+	
+	<script type="text/javascript" src="/js/jquery.blueimp-gallery.min.js"></script>
+	<script type='text/javascript' src='/js/bootstrap-image-gallery.min.js'></script>
+	
+	<script type='text/javascript' src='/js/scripts.js'></script>
+
 
   </head>
 <body>
 
 <stdscripts>
-<script language='javascript' src='/js/jquery.min.js'></script>
-<script language='javascript' src='/js/bootstrap.min.js'></script>
-<script language='javascript' src='/js/scripts.js'></script>
 <script language='javascript'>
 $(document).ready(function(){
 	$('#change_template').tooltip({
@@ -82,7 +97,44 @@ $(document).ready(function(){
   
 
 
-  
+<div class="container" style="display:block;">
+	<!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+	<div id="blueimp-gallery" class="blueimp-gallery" data-use-bootstrap-modal="false">
+	    <!-- The container for the modal slides -->
+	    <div class="slides"></div>
+	    <!-- Controls for the borderless lightbox -->
+	    <h3 class="title"></h3>
+	    <a class="prev">‹</a>
+	    <a class="next">›</a>
+	    <a class="close">×</a>
+	    <a class="play-pause"></a>
+	    <ol class="indicator"></ol>
+	    <!-- The modal dialog, which will be used to wrap the lightbox content -->
+	    <div class="modal fade">
+	        <div class="modal-dialog">
+	            <div class="modal-content">
+	                <div class="modal-header">
+	                    <button type="button" class="close" aria-hidden="true">&times;</button>
+	                    <h4 class="modal-title"></h4>
+	                </div>
+	                <div class="modal-body next"></div>
+	                <div class="modal-footer">
+	                    <button type="button" class="btn btn-default pull-left prev">
+	                        <i class="glyphicon glyphicon-chevron-left"></i>
+	                        Предыдущая
+	                    </button>
+	                    <button type="button" class="btn btn-primary next">
+	                        Следующая
+	                        <i class="glyphicon glyphicon-chevron-right"></i>
+	                    </button>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+</div>
+
+
 <footer class="footer">
   <!--div class="container">
     <% content 'footer' %>
