--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,4 +1,15 @@
 
+
+<div class="container">
+	<div class="col-sm-10">
+		<legend>сообщения ({{.messages_count}}):</legend>
+	</div>
+	<div class="col-sm-1 col-sm-offset-1">
+		<button type="submit" class="btn btn-primary btn-lg new_message_btn pull-right">написать сообщение</button>
+	</div>
+</div>
+
+
 <div class="container" id=messages>
 	{{if .error}}
 		<div class="alert alert-dismissible alert-danger">
@@ -10,6 +21,7 @@
 <div class="container" id=messages>
 	
 </div>
+
 
 <div class="row">
 	<div class="col-md-12 col-md-offset-0">
@@ -46,17 +58,22 @@
 	</div>
 </div>
 
-<div class="container" id=comments>
 
-</div>
 
 <script  type="text/javascript">
-function load_all_messages(){
+function load_messages(type,uuid_parent,skip){
+	load_messages_btn_remove('#messages');
 	progress_loading('#messages',show=1,text='загрузка сообщений',size=40);
 	setTimeout(function(){
 		var d = {}
 		d['type'] = 'loadmessages';
-		d['uuid_post'] = '{{.post.uuid}}';
+		
+		if(!uuid_parent) uuid_parent = "-";
+		d['uuid_parent'] = uuid_parent;
+		
+		if(!skip) skip = 0;
+		d['skip'] = skip;
+
 		var jsondatastr = JSON.stringify(d);
 		
 		$.ajax({
@@ -71,26 +88,41 @@ function load_all_messages(){
 			if(d['error']){
 				return show_error_msg('#messages',d['error'],{is_sys_error:0,max_errors_show:2})
 			}
-			$('#messages').html('');
+			
 			for(var i in d){
 				var e = d[i]
 				if(!e) continue;
 				if(!e['text']) continue;
+				skip++;
 				add_message('#messages',d[i],i)
 			}
-			$('#messages').append(dtext);
+			load_messages_btn_add('#messages',skip);
 		}).fail(function() {
 			var msg = "<b>ВНИМАНИЕ: произошла внутренняя ошибка сервера</b><br> повторите ваш запрос немного позже"
 			show_msg('#messages',msg,{is_sys_error:1,max_errors_show:2})
 		});
-	},3000);
+	},300);
+}
+
+function load_messages_btn_remove(id_selector){
+	var obj = $(id_selector);
+	obj.find('#load_messages_btn_container').remove();
+}
+
+function load_messages_btn_add(id_selector,skip){
+	var obj = $(id_selector);
+	load_messages_btn_remove(id_selector)
+	obj.append('<div id=load_messages_btn_container><center><button type="submit" class="btn btn-default" id=load_messages_btn>загрузить ещё сообщения</button></center><br><br></div>');
+	obj.find('#load_messages_btn').click(function(){
+		load_messages('next','-',skip);
+	});
 }
 
 function add_message(id_selector,d,message_n){
 
-	var u = d['userdata']
-	var user = 'неизвестный'
-	if(u) user = u['fam']+' '+u['name']+' '+u['pat']
+	var u = d['name']
+	var user = 'аноним'
+	if(u) user = u
 	var date = d['datefmt']
 	var text = d['text']
 	
@@ -99,12 +131,12 @@ function add_message(id_selector,d,message_n){
 	var images = d['images']
 	for(i=0;i<imgcnt;i++){
 		img = images[i]
-		imgs += '<a href="'+img['path']+'" title="'+img['title']+'" data-gallery="imgs'+message_n+'">'+
-				'	<img src="'+img['pathmin']+'" style="margin:4px;padding:4px;">'+
-				'</a>';
+		imgs += '<div class="image-block"><a href="'+img['path']+'" title="'+img['title']+'" data-gallery="imgs'+message_n+'" class="">'+
+				'	<img src="'+img['pathmin']+'" style="margin:4px;padding:4px;"><br>'+img['title']+
+				'</a></div>';
 	}
 	
-	var s = '<div class="panel panel-default panel-horizontal">'+
+	var s = '<div class="panel panel-default panel-horizontal" mes_uuid="'+d['uuid']+'">'+
 			'	<div class="panel-heading" style="width:30%;text-align:right;">'+
 			'		'+user+'<br><font style="font-size:8pt;">'+date+'</font>'+
 			'	</div>'+
@@ -114,10 +146,9 @@ function add_message(id_selector,d,message_n){
 }
 
 jQuery( document ).ready(function() {
-	load_all_messages();
+	load_messages('first');
 });
 </script>
-
 
 
 <div class="container" id=messagenew>
