--- a/templates/maintemplate.html
+++ b/templates/maintemplate.html
@@ -5,6 +5,9 @@
 	
 	
 	<link rel="shortcut icon" type="image/ico" href="/img/favicon.ico">
+	
+	<link rel='stylesheet' href='/css/minify.{{if .s.white}}white{{else}}dark{{end}}.css' />
+	<!--
     <link rel='stylesheet' href='/css/bootstrap{{if .s.white}}.white{{else}}.dark{{end}}.min.css' />
 
 	<link rel="stylesheet" href="/css/blueimp-gallery.min.css">
@@ -13,11 +16,13 @@
 	<link rel='stylesheet' href='/css/stickyfooter.css' />
 	<link rel='stylesheet' href='/css/fonts.css' />
 	<link rel='stylesheet' href='/css/styles.css' />
+	-->
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	
+	<script type='text/javascript' src='/js/minify.all.js'></script>
+	<!--
 	<script type='text/javascript' src='/js/jquery.min.js'></script>
 	<script type='text/javascript' src='/js/bootstrap.min.js'></script>
 	
@@ -25,7 +30,7 @@
 	<script type='text/javascript' src='/js/bootstrap-image-gallery.min.js'></script>
 	
 	<script type='text/javascript' src='/js/scripts.js'></script>
-
+	-->
 
   </head>
 <body>
