--- a/templates/main.html
+++ b/templates/main.html
@@ -3,18 +3,39 @@
 
 
 <div class="container">
-	<center>
+	
 	<h1 id="type">
-		<ff3><big><big>Ремонт <b>ПК</b>, <b>Ноутбуков</b> и Мониторов. <br></big></big></ff3>
-		<ff3><big>Заправка <b>картридж</b>ей.</big></ff3><br>
-		<ff3><big>в городе Инта</big></ff3>
+		<ff3><big><big>
+		<center><b>Сайт на реконструкции</b></center><br>
+		<div style="text-align:right;"><p><ff2>но на самом деле хз <br>буду ли им вообще заниматься</ff2><br></div>
+		
+		</big></big></ff3>
+		<ff3><big></big></ff3><br>
 	</h1>
-	</center>
+	
 	<br>
 </div>
 
+<div class="container">
+  <div class="row">
+        <div class="col-lg-6" id="anykeyadmininfo">
+		    <div class="well clearfix">
+			<div class="clearfix">
+					<h1><small></small>пока ещё работает сайт<b> <a href="http://anykeyadmin.info/s?d=p">anykeyadmin.info</a></b></h1>
+					<a href="http://anykeyadmin.info/?main"><img src="/img/anykeyadmin.info.png" class="col-lg-6 col-md-6 col-xs-12 col-sm-6 img-responsive0 pull-right0" alt="картинка с сайта anykeyadmin.info"></a>
+					
+		
+					<h3>
+						<br><br>
+					    <b><a href="http://anykeyadmin.info/s?d=a"><big class="text-warning">посмотреть</big></a>
+					</h3>
+			</div>
+		    </div>
+        </div>
+  </div>
+</div>
 
-
+<!--
 <div class="container">
   <div class="row">
           <div class="col-lg-6" id="ustanovka_oc">
@@ -24,7 +45,7 @@
 		<h2>Операционной Системы</h2>
 		<h3></h3>
               	<h4>драйверов и стандартного софт набора</h4>
-		<h3>за <big>все</big> <!-- <big class="text-danger">всего</big> -->
+		<h3>за <big>все</big> 
 		    &nbsp;<b><big class="text-warning"><big>7</big>00&nbsp;</big> рублей</big></b>
 		</h3>
 		<a href="#zvonite" class="btn btn-primary btn-lg">звоните</a>
@@ -35,7 +56,7 @@
 		<img src="/img/comp.png" class="col-lg-6 col-md-6 col-xs-12 col-sm-6 img-responsive pull-right" alt="ремонт ноутбуков">
 		<h1><b>Чистка-ремонт ноутбуков</b></h1>
 		<h3>замена термопасты/матрицы</h3>
-		<h3><big>все</big> это <!--<big class="text-danger">всего</big>-->
+		<h3><big>все</big> это 
 		    <big></big> &nbsp;<b><big class="text-warning"><big>7</big>00&nbsp;</big> рублей</big></b>
 		    <br>
 		</h3>
@@ -81,20 +102,6 @@
   </div>
   
   <div class="row">
-		<!--
-        <div class="col-lg-6" id="nastroyka_ineta">
-	    <div class="well clearfix">
-		<img src="/img/router.png" class="col-lg-6 col-md-6 col-xs-12 col-sm-6 img-responsive pull-right" alt="настройка роутеров модемов">
-		<h1><b>Настройка интернета</b></h1>
-		<h3>настройка wi-fi, роутеров, модемов</h3>
-		<h3>звоните, - и уже в течении 20-30мин все будет работать )</h3>
-		<h2>
-		    <b><big class="text-warning"><big>2</big>00&nbsp;</big> рублей</big></b>
-		</h2>
-		<a href="#zvonite" class="btn btn-primary btn-lg">звоните</a>
-	    </div>
-        </div>
-		-->
         <div class="col-lg-6" id="sozdanie_sayta">
 	    <div class="well clearfix">
 		<div class="clearfix">
@@ -105,9 +112,8 @@
 			<h3><b>Легко!</b>  создание, хостинг, администрирование
 			<br><a href="#zvonite">звоните</a></h3>
 			<h3>
-			    <b><big class="text-warning">цена договорная</big><!--  <br>&nbsp;&nbsp;в зависимости от сложности</b> -->
+			    <b><big class="text-warning">цена договорная</big>
 			</h3>
-			<!-- <big class="pull-right"><big>примеры уже готовых сайтов <a href='/sites'><u>тут</u></a></big></big> -->
 		</div>
 		<a href="#zvonite" class="btn btn-primary btn-lg pull-right">пишите</a>
 	    </div>
@@ -116,14 +122,12 @@
 
 </div>
 
+
 <div class="jumbotron" id="zvonite">
   <h1>Звоните<small><small>, дайте дозвон или <a href="/messages#new" class="btn btn-lg btn-primary"><big>пишите</big></a> и вам перезвонят</small></small></h1>
   <h2><u>перед</u> звонком обязательно узнайте модель вашего ноутбука, монитора или принтера/картриджа</h2>
   <br>
-  <h3> <i><b> <big> +7 912-131-72-18 </big></b></i><small>(мтс город Инта)</small></h3>
- 
+  <h3> <i><b> <big> +7 912-131-00-00 </big></b></i><small>(мтс город Инта)</small></h3>
   <br><br><br>
-  <!--
-  <p>или <a class="btn btn-primary btn-lg">напишите мне</a> и я вам перезвоню <small>(в течении 20 минут)</small></p>
-  -->
 </div>
+-->
