--- a/templates/maintemplate.html
+++ b/templates/maintemplate.html
@@ -61,17 +61,18 @@ $(document).ready(function(){
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-			<big><ff1>РЕМОНТ<big><big>.</big></big></big></ff1><ff1><big><i>В</i><big><small><small> </small></small>Рашке.ru</big></big></ff1> &nbsp;&nbsp; &nbsp;	
+			<ff1><big><big><big><i>В</i>Рашке.ru</big></big></big></ff1> &nbsp;&nbsp; &nbsp;	
 	  </a>
     </div>
 
     <div class="navbar-collapse collapse in" id="bs-example-navbar-collapse-1" aria-expanded="true">
 		  <ul class="nav navbar-nav">
-	              <li><a href="/main#sozdanie_sayta"><ff1>создание/хостинг/поддержка сайта</ff1></a></li>
-	              <li><a href="/main#remont_noutbuka"><ff1>ремонт ПК и Ноутбуков</ff1></a></li>
-	              <li><a href="/main#zapravka_cartridja"><ff1>заправка Картриджей</ff1></a></li>
+	              <li><a href="/main#x"><big><ff1>добро пожаловать )</ff1></big></a></li>
+	              <!--<li><a href="/main#remont_noutbuka"><ff1>ремонт ПК и Ноутбуков</ff1></a></li>-->
+	              <!--<li><a href="/main#zapravka_cartridja"><ff1>заправка Картриджей</ff1></a></li>-->
 	      </ul>
 		  <ul class="nav navbar-nav navbar-right">
+			  <li><a href="/messages#new" class=""><big><ff1>сообщения администратору и другим посетителям</ff1></big></a></li>
 		      <li>
 	                <div class="col-md-8">
 	                <a 	href="/{{if .s.dark}}white{{else}}dark{{end}}" class="btn" 
