--- a/templates/main.html
+++ b/templates/main.html
@@ -7,10 +7,13 @@
 	<h1 id="type">
 		<ff3><big><big>
 		<center><b>Сайт на реконструкции</b></center><br>
+		
+		<img src="/img/attention1.png" class="col-lg-offset-2 col-lg-3 col-md-offset-2 col-md-3  col-xs-offset-2 col-xs-6 col-sm-offset-2 col-sm-3 img-responsive pull-left" alt="!">
 		<div style="text-align:right;"><p><ff2>но на самом деле хз <br>буду ли им вообще заниматься</ff2><br></div>
 		
 		</big></big></ff3>
-		<ff3><big></big></ff3><br>
+		<ff3><big></big></ff3>
+		<br><br><br>
 	</h1>
 	
 	<br>
